--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         <ul class="nav navbar-nav">
           <li><a href="/blog">Blog</a></li>
           <li><a href="https://www.linkedin.com/in/gu-yuan/" target="_blank">LinkedIn</a></li>
-          <li><a href="/resume.pdf">Resume</a></li>
         </ul>
 
       </div><!-- /.navbar-collapse -->
@@ -45,10 +44,10 @@
 
 	<br>
 	<b>
-	I am now actively seeking full-time SWE positions for new grad starting from Dec 2021. Here is my <a href="https://www.linkedin.com/in/gu-yuan/" target="_blank">LinkedIn</a> and <a href="/user/guy/resume.pdf">resume.</a>
+	I am now actively seeking full-time SWE positions for new grad starting from Dec 2021. For more professional details, you may connect me on <a href="https://www.linkedin.com/in/gu-yuan/" target="_blank">LinkedIn</a>
+  I also maintain a <a href = "/blog">blog</a> where I talk about tech, experience, movies, and politics. I came from Beijing.
 	</b>
         <br>
-
         <br>
         Below are some of my "titles":
         <br>
@@ -56,7 +55,7 @@
             <li>Software Engineering Intern @ Cloudera, Inc., <a href = "https://ozone.apache.org/" target="_blank">Hadoop Ozone</a> Team, summer 2021</li>
             <li>Mobile Developer @ Iowa State University, <a href = "https://covid19.stat.iastate.edu/" target="_blank">COVID-19 tracker</a>, summer 2020</li>
             <li>Software Engineering Intern @ IBM China, Digital Sales Team, summer 2019</li>
-            <li>Various TA and RA positions @ Carnegie Mellon University and William & Mary</li>
+            <li>Various T.A. and R.A. positions @ Carnegie Mellon University and William & Mary</li>
             <li>Current second-year master student @ CMU (Dec 2021)</li>
             <li>Alumni of W&M (2020er) and Beijing No.8 High School (2017er)</li>
         </ul>
