--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/user/guy">About Me</a>
+        <a class="navbar-brand" href="/">About Me</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
